--- a/app/src/main/res/layout/activity_coin_prce_list.xml
+++ b/app/src/main/res/layout/activity_coin_prce_list.xml
@@ -6,51 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".presentation.CoinPriceListActivity">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCoinPriceList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/fab_update"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_coin_info" />
 
-    <!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent">-->
-
-    <!--        <com.google.android.material.bottomappbar.BottomAppBar-->
-    <!--            android:id="@+id/bottomAppBar"-->
-    <!--            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            app:menu="@menu/bottom_bar_menu"-->
-    <!--            android:layout_gravity="bottom" />-->
-
-    <!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:backgroundTint="#00BCD4"
-        android:src="@drawable/free_icon_font_settings_3917051_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <TextView
         android:id="@+id/fab_update"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#79D50F"
         android:src="@drawable/free_icon_font_refresh_3917307_24"
+        android:text="@string/reflash"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:background="#4AD34F"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/fab_settings"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:drawableStartCompat="@drawable/free_icon_font_refresh_3917307_24"
+        />
+
+    <TextView
+        android:id="@+id/fab_settings"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/free_icon_font_settings_3917051_24"
+        android:text="@string/settings"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:background="#ECD93A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/fab_update"
+        app:drawableStartCompat="@drawable/free_icon_font_settings_3917051_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
